--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bbsocker.sync",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Backbone sync for socker, engine.io based CRUD for websockets",
   "main": "bbsocker.sync.js",
   "scripts": {
@@ -37,7 +37,7 @@
     }
   },
   "dependencies": {
-    "compy": "latest",
+    "compy": "0.1.18",
     "karma-mocha": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-sinon-chai": "~0.1.1"
